--- a/src/app/items/items.component.html
+++ b/src/app/items/items.component.html
@@ -1,5 +1,5 @@
 <div class="container p-2 mx-auto sm:p-4 text-gray-800">
-	<h2 class="mb-4 text-2xl font-semibold leading-tight">Invoices</h2>
+	<h2 class="mb-4 text-2xl font-semibold leading-tight w-full justify-center items-center">Items</h2>
 	<div class="overflow-x-auto">
 		<table class="min-w-full text-xs">
 			<colgroup>
@@ -37,3 +37,4 @@
 		</table>
 	</div>
 </div>
+<router-outlet />
